--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: './e2b-sandbox-project/package-lock.json'
+          cache-dependency-path: 'e2b-sandbox-project/package-lock.json'
       
       - name: Install dependencies
         run: |
